--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -1,2 +1,64 @@
 // slide样式
-slide-arrow
+.slide-container{
+    
+}
+.slide-container .slide-content{
+    position: relative;
+    height: 700px;
+}
+.slide-container .slide-arrow{
+    position: absolute;
+    top:46%;
+    z-index: 9999999;
+    color: #fff;
+    background: rgba(255,255,225,0.6);
+    color: #12879A;
+    border-radius: 100px;
+    padding:5px 20px;
+    font-size: 40px;
+    cursor: pointer;
+}
+.slide-container .slide-arrow2{
+    position: absolute;
+    top:46%;
+    z-index: 9999999;
+    color: #fff;
+    color: #12879A;
+    border-radius: 100px;
+    padding:5px 20px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.slide-container .slide-arrow:hover{
+    background: rgba(0,0,0,0.6);
+}
+.slide-container .slide-next{
+    right:0
+}
+.slide-container .slide-content-inner{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+.slide-container .slide-content-inner img{
+    height: 100%;
+}
+.slide-container .slide-tools{
+    position: relative;
+}
+.slide-thumbnail{
+    margin: 30px 50px;
+}
+.slide-thumbnail li{
+    display: inline-block;
+    width: 90px;
+    margin: 6px;  
+}
+.slide-thumbnail img{
+    width: 100%;
+}
+.slide-thumbnail img:hover{
+    width: 99%;
+    border: 2px solid #009CD6;
+}
