--- a/src/less/frontend.less
+++ b/src/less/frontend.less
@@ -23,7 +23,7 @@
 /*个人设置页面样式*/
 @import "settings.less";
 /*个人中心页面样式*/
-@import "personal-center.less"
+@import "personal-center.less";
 /*帮助中心*/
 @import "help.less";
 /*消息中心*/
