--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -1,4 +1,126 @@
 <div id="customres-container">
-	资源定制
-	<br>
+	<div class="custom_types">
+
+		<div class="row">
+
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<p class="type_name">动画定制</p>
+					<img src="../../../assets/img/custom/play.png" alt="动画定制">
+					<div class="caption">
+						<p class="type_des">根据需求为您量身定制教学动画，让你的课堂更加生动。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<p class="type_name">课件定制</p>
+					<img src="../../../assets/img/custom/shiyan.png" alt="课件定制">
+					<div class="caption">
+						<p class="type_des">专业技术人员，为您定制课件，让您的课堂更精彩。</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<p class="type_name">微课定制</p>
+					<img src="../../../assets/img/custom/miclesson.png" alt="微课定制">
+					<div class="caption">
+						<p class="type_des">名师指导，为您定制微课，让您的课堂有声有色</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="subject_box">
+		
+		<div class="prepare-all-list">
+			<div class="prepare-all-header">
+				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
+				<span class="subject">数学</span>
+				<div class="coms-pagination">
+					<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;"></uib-pagination>
+					<div class="page-go">
+						<span class="page-text">转到</span>
+						<input class="page-input" />
+						<span class="page-go-btn">Go</span>
+					</div>
+				</div>
+			</div>
+			<div class="prepare-gallery row">
+				<!--<span class="leftbtn icon-angle"><i class="icon-angle-left"></i></span>-->
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				<div class="list-all-item col-md-3">
+					<div class="item_inner">
+						<img class="prepare-all-item-img" src="../../../assets/img/custom/hua.png" />
+						<div class="list-all-title">动画：荷塘月色</div>
+						<div class="btnBox">
+							<span class="download">立即下载</span>
+							<button class="btn btn-success">加入备课夹</button>
+						</div>
+					</div>
+				</div>
+				
+				<!--<span class="rightbtn icon-angle"><i class="icon-angle-right"></i></span>-->
+			</div>
+			
+		</div>
+		
+		
+		
+		
+		
+	</div>
+</div>
 </div>
