--- a/src/coms/res-custom/views/customres.html
+++ b/src/coms/res-custom/views/customres.html
@@ -1,3 +1,4 @@
 ﻿<div class="container" id="customres-container">	
-	<div data-ng-include="'/coms/res-custom/views/customres-content.html'"></div>
+	<div data-ng-include="'/coms/res-custom/views/customres-content.html'">
+	</div>
 </div>
