--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -6,7 +6,7 @@
 			<li><a ui-sref="settings"><i class="icon-user"></i> &nbsp;XXX,欢迎您</a></li>
 			<li><a ui-sref="message">消息</a></li>
 			<li><a ui-sref="help">帮助中心</a></li>
-			<li><a href="#">退出</a></li>
+			<li><a  ng-click="logout()">退出</a></li>
 		</ul>
 	</div>
 	<div class="container banner"><img src="assets/img/banner.png" /></div>
