--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -56,8 +56,8 @@
 	<a class="select-tips">全部</a>-->
 	<div class="res-filter">
 		<!--<label class="right-label">收起筛选</label>-->
-		<input class="res-search" type="search" placeholder="在当前条件下搜索" />
-		<span class="res-search-btn">
+		<input class="res-search" type="search" placeholder="在当前条件下搜索" ui-sref="search"/>
+		<span class="res-search-btn" ui-sref="search">
 			<i class="icon-search"></i>	   
 		</span>
 	</div>
