--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -1,4 +1,63 @@
 ﻿<div class="empty-nav"></div>
 <div class="container" id="search-container">
-	我是搜索页
+	<div class="list_box">
+			<div class="res-list-main">
+		<ul class="res-ul-list" >
+			<li class="res-list-item" >
+				<input class="res-checkbox" type="checkbox">
+				<img class="res-list-thumb" src="../../../assets/img/search/tu.png">
+				<span class="res-list-info">
+					<label class="res-title">《触摸春天》生字学习</label><br>
+					<label class="res-type">类型: 动画</label>
+					<label class="res-size">大小：10M</label>
+					
+					<span class="star_box">
+						<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
+						<label class="res-number">281浏览/5下载</label>
+					</span>
+				</span>
+				<span class="res-list-tools">
+					<add-to-cart-button class="res-select">移出备课夹</add-to-cart-button><br>
+					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+				</span>
+			</li>
+			<li class="res-list-item" >
+				<input class="res-checkbox" type="checkbox">
+				<img class="res-list-thumb" src="../../../assets/img/search/tu.png">
+				<span class="res-list-info">
+					<label class="res-title">《触摸春天》生字学习</label><br>
+					<label class="res-type">类型: 动画</label>
+					<label class="res-size">大小：10M</label>
+					<span class="star_box">
+						<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
+						<label class="res-number">281浏览/5下载</label>
+					</span>
+				</span>
+				<span class="res-list-tools">
+					<add-to-cart-button class="res-select">移出备课夹</add-to-cart-button><br>
+					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+				</span>
+			</li>
+			<li class="res-list-item" >
+				<input class="res-checkbox" type="checkbox">
+				<img class="res-list-thumb" src="../../../assets/img/search/tu.png">
+				<span class="res-list-info">
+					<label class="res-title">《触摸春天》生字学习</label><br>
+					<label class="res-type">类型: 动画</label>
+					<label class="res-size">大小：10M</label>
+					<span class="star_box">
+						<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
+						<label class="res-number">281浏览/5下载</label>
+					</span>
+					
+				</span>
+				<span class="res-list-tools">
+					<add-to-cart-button class="res-select">移出备课夹</add-to-cart-button><br>
+					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+				</span>
+			</li>
+		</ul>
+	</div>
+	</div>
+
 </div>
