--- a/src/less/frontend.less
+++ b/src/less/frontend.less
@@ -32,4 +32,7 @@
 @import "slide.less";
 /*在线授课*/
 @import "onlineres.less";
-
+/*定制页面*/
+@import "customres.less";
+/*搜索页面*/
+@import "search.less";
