--- a/src/less/res.less
+++ b/src/less/res.less
@@ -180,7 +180,8 @@
 }
 .res-navbody .select-item{
     text-align: center;
-    padding: 3px 10px;
+    padding: 3px 7px;
+    margin: 0 3px;
     cursor: pointer;
 }
 .res-navbody .select-item:hover {
@@ -192,7 +193,7 @@
   background: @color8;
 }
 .res-navbody .res-subject-wrapper{
-    width: 70%;
+    width: 90%;
     float: left;
 }
 .res-navbody .res-more {
@@ -200,6 +201,10 @@
   position: absolute;
   top:0;
   right: 30px;
+}
+.res-version-wrapper{
+   float: left; 
+   width: 72%;
 }
 
 .res-navbody  .res-material-version{
