--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -1,5 +1,5 @@
 <!--系统资源页头部-->
-<div class="res-header" ng-controller="SystemResHeaderController">
+<div class="res-header" ng-controller="ResHeaderController" ng-init="initData()">
 	<!-- 选择 导航 展示-->
 	<div class="left-tips">您已选择：</div>
 	<div class="select-nav-item">
@@ -12,7 +12,7 @@
 			
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span>{{ grade }}</span></li>
+					<li ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)"><span>{{ grade.name }}</span></li>
 				</ul>
 			</div>
 		</div>
@@ -28,7 +28,7 @@
 			
 			<div class="menu-drop-main">
 				<ul class="menu-drop-list">
-					<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject }}</span></li>
+					<li ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)"><span>{{ subject.name }}</span></li>
 				</ul>
 			</div>
 		</div>
@@ -67,12 +67,12 @@
 <div class="res-navbody">
 	<div class="res-body-content res-grade" ng-hide="VM.currentHeader">
 		<span class="res-content-left">学段:</span>
-		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">{{ grade }}</span>
+		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">{{ grade.name}}</span>
 	</div>
 	<div class="res-body-content res-subject" ng-hide="VM.currentHeader">
 		<div class="res-content-left">学科:</div>
 		<div class="res-subject-wrapper"> 
-			<span class="select-item res-subject-content" ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)">{{ subject }}</span>
+			<span class="select-item res-subject-content" ng-repeat="subject in VM.subject track by $index" ng-class="VM.currentSubjectSeclet[$index]?'selected':''" ng-click="VM.selectSubject($index)">{{ subject.name }}</span>
 		</div>
 		<!--<span class="res-more">
 		   	<a>更多<i class="icon-angle-down"></i></a>
@@ -81,13 +81,15 @@
 	<div class="clearfix"></div>
 	<div class="res-body-content res-material-version" ng-hide="VM.currentVersionShow">
 		<div class="res-content-left">版本:</div>
-		<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-click="VM.selectVersion($index)">{{ v }}</span>
+		<div  class="res-version-wrapper">
+			<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-click="VM.selectVersion($index)">{{ v.name }}</span>
+		</div>
 	</div>
 	<div class="clearfix"></div>
 
 	<div class="res-body-content res-material-version" ng-hide="VM.currentMaterialShow || !VM.currentVersionShow">
 		<div class="res-content-left">教材:</div>
-		<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-click="VM.selectMaterial($index)">{{ v }}</span>
+		<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-click="VM.selectMaterial($index)">{{ v.name }}</span>
 	</div>
 	<div class="res-content-footer" ng-hide="VM.currentMaterialShow">
 		<img src="assets/img/res-nav-footer.png">
