筛选栏初步完成

--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -21,7 +21,7 @@
 	<div class="select-nav-item">
 		<div class="menu-drop">
 			<div class="trigger">
-				<span class="select-current">{{VM.currentSubject}}</span>
+				<span class="select-current">{{VM.currentSubject.name}}</span>
 				<i class="icon-angle-down"></i>
 				<i class="icon-angle-up"></i>
 			</div>
@@ -37,7 +37,7 @@
 	<div class="select-nav-item"  ng-show="VM.currentVersionShow || VM.currentVersionTmpShow">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentVersion()">
-				<span class="select-current" href="">{{VM.currentVersion}}</span>
+				<span class="select-current" href="">{{VM.currentVersion.name}}</span>
 				<i class="icon-remove"></i>
 			</div>
 		</div>
@@ -46,7 +46,7 @@
 	<div class="select-nav-item"  ng-show="VM.currentMaterialShow">
 		<div class="menu-drop">
 			<div class="trigger" ng-click="closeCurrentMaterial()">
-				<span class="select-current" href="">{{VM.currentMaterial}}</span>
+				<span class="select-current" href="">{{VM.currentMaterial.name}}</span>
 				<i class="icon-remove"></i>
 			</div>
 		</div>
@@ -69,6 +69,7 @@
 		<span class="res-content-left">学段:</span>
 		<span class="select-item res-grade-content" ng-repeat="grade in VM.grade track by $index" ng-class="VM.currentGradeSeclet[$index]?'selected':''" ng-click="VM.selectGrade($index)">{{ grade.name}}</span>
 	</div>
+	<div class="clearfix"></div>
 	<div class="res-body-content res-subject" ng-hide="VM.currentHeader">
 		<div class="res-content-left">学科:</div>
 		<div class="res-subject-wrapper"> 
@@ -79,18 +80,22 @@
 		</span>-->
 	</div>
 	<div class="clearfix"></div>
-	<div class="res-body-content res-material-version" ng-hide="VM.currentVersionShow">
+	<div class="res-body-content res-material-version" ng-hide="VM.currentVersionShow || VM.version.length==0 || !VM.version">
 		<div class="res-content-left">版本:</div>
 		<div  class="res-version-wrapper">
-			<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-click="VM.selectVersion($index)">{{ v.name }}</span>
+			<span ng-repeat="v in VM.version track by $index" class="select-item res-material-content" ng-class="VM.currentVersionSeclet[$index]?'selected':''"  ng-click="VM.selectVersion($index)">{{ v.name }}</span>
 		</div>
 	</div>
 	<div class="clearfix"></div>
 
-	<div class="res-body-content res-material-version" ng-hide="VM.currentMaterialShow || !VM.currentVersionShow">
+	<!--<div class="res-body-content res-material-version" ng-hide="VM.currentMaterialShow || !VM.currentVersionShow">-->
+	<div class="res-body-content res-material-version" ng-hide="!VM.material || VM.material.length==0">
 		<div class="res-content-left">教材:</div>
-		<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-click="VM.selectMaterial($index)">{{ v.name }}</span>
+		<div  class="res-material-wrapper">
+			<span ng-repeat="v in VM.material track by $index" class="select-item res-material-content" ng-class="VM.currentMaterialSeclet[$index]?'selected':''" ng-click="VM.selectMaterial($index)">{{ v.name }}</span>
+		</div>	
 	</div>
+	<div class="clearfix"></div>
 	<div class="res-content-footer" ng-hide="VM.currentMaterialShow">
 		<img src="assets/img/res-nav-footer.png">
 		<div></div>
