--- a/src/less/res.less
+++ b/src/less/res.less
@@ -164,7 +164,7 @@
 }
 .res-navbody .res-body-content {
   border-bottom: 1px dashed @fff;
-  line-height: 50px;
+  line-height: 40px;
   color: @color1;
   font-size: 20px;
   position: relative;
@@ -180,9 +180,11 @@
 }
 .res-navbody .select-item{
     text-align: center;
-    padding: 3px 7px;
-    margin: 0 3px;
+    padding: 0px 7px;
+    margin: 3px 3px;
     cursor: pointer;
+    white-space:normal;
+    float: left;
 }
 .res-navbody .select-item:hover {
   color: #FFF;
@@ -204,9 +206,12 @@
 }
 .res-version-wrapper{
    float: left; 
+   width: 82%;
+}
+.res-material-wrapper{
+   float: left; 
    width: 72%;
 }
-
 .res-navbody  .res-material-version{
     clear: both;
 }
