--- a/src/less/search.less
+++ b/src/less/search.less
@@ -2,6 +2,87 @@
 {
     
 }
+
+
+/*头部搜索*/
+
+#search-container .search_tools{
+    min-height: 100px;
+    background: @color4;
+    font-size: 1.5rem;
+    overflow: hidden;
+   
+    
+}
+#search-container .search_tools_inner
+{
+    width: 500px;
+    min-height: 100px;
+    margin: 0 auto;
+}
+#search-container .trigger
+{
+    border: 1px solid #eee;
+    height: 35px;
+    padding-top: 1px;
+}
+#search-container .trigger .select-current{
+  display: inline-block;
+  width: 80px;
+  height: 30px;
+}
+#search-container .search_box
+{
+    float: left;
+    border: 1px solid #eee;
+    width: 300px;
+    height: 37px;
+    margin-top: 15px;
+    background:@fff;
+    
+}
+#search-container .search_text
+{
+   
+    outline: none;
+    height: 100%;
+    width: 255px;
+    outline: none;
+    border: none;
+    text-indent: 5px;
+}
+
+#search-container .search_btn
+{
+    background: @color1;
+    color: @fff;
+    font-size: 1.5rem;
+   padding: 5px;
+   cursor: pointer;
+    
+}
+#search-container .search_list
+{
+    overflow: hidden;
+    clear: both;
+    margin-left: 30px;
+    color: @color12;
+    
+}
+#search-container .search_list li{
+    float: left;
+    margin: 10px;
+    margin-top: 18px;
+}
+#search-container .search_list .selected{
+    color: @color1 !important;
+}
+
+
+
+
+
+/*列表样式 共用system页面样式*/
 #search-container .list_box
 {
     background: #fff;
@@ -11,6 +92,7 @@
 {
     background: #fff;
     margin: 10px;
+    margin-top: 15px;
 }
 #search-container .res-ul-list
 {
