--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -11,6 +11,9 @@ body{
 a,a:hover{
     text-decoration:none;
 }
+div[ui-view="content"]{
+    min-height: 900px;
+}
 //滚动条
 ::-webkit-scrollbar {
   width: 7px;
