--- a/src/less/res.less
+++ b/src/less/res.less
@@ -159,14 +159,14 @@
 }
 .res-navbody {
   display: block;
-  background: @color6;
+  background: #E4F3F7;
   clear: both;
 }
 .res-navbody .res-body-content {
   border-bottom: 1px dashed @fff;
-  line-height: 40px;
+  line-height: 30px;
   color: @color1;
-  font-size: 20px;
+  font-size: 16px;
   position: relative;
 }
 .res-navbody .res-body-content{
