--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -10,7 +10,7 @@
 			<div class="slide-fullscreen"><i class="icon-fullscreen"></i></div>
 		</div>
 		
-		<div class="slide-tools">
+		<div class="slide-tools" ng-show="VM.slideTools">
 			<div class="slide-arrow2 slide-pre"><i class="icon-chevron-left"></i></div>
 			<div class="slide-arrow2 slide-next"><i class="icon-chevron-right"></i></div>
 			<ul class="slide-thumbnail">
