--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -1,7 +1,7 @@
 <div class="res-content-header"></div>
 <div id="res-content-right">
 	<div class="res-header-catogry">
-		<span class="catogry-item">全部</span>
+		<span class="catogry-item catogry-item-active">全部</span>
 		<span class="catogry-item">动画教具库</span>
 		<span class="catogry-item">名师微课库</span>
 		<span class="catogry-item">教学案例库</span>
@@ -14,15 +14,26 @@
 	<div class="res-header-type">
 		<span class="type-title">资源类型:</span>
 		<span class="type-list type-active">全部</span>
-		<span class="type-list">动画</span>
-		<span class="type-list">视频</span>
-		<span class="type-list">音频</span>
-		<span class="type-list">图片</span>
-		<span class="type-list">网页</span>
 		<span class="type-list">课件</span>
+		<span class="type-list">动画教具</span>
+		<span class="type-list">微课</span>
+		<span class="type-list">案例</span>
 		<span class="type-list">教案</span>
+		<span class="type-list">试题试卷</span>
+		<span class="type-list">学案</span>
+		<span class="type-list">多媒体教辅</span>
+		<span class="type-list">教学素材</span>
+		<span class="type-list">电子图书</span>
+	</div>
+	<div class="res-header-type">
+		<span class="type-title">资源格式:</span>
+		<span class="type-list type-active">全部</span>
 		<span class="type-list">文本</span>
-		<span class="type-list">试题</span>
+		<span class="type-list">图片</span>
+		<span class="type-list">音频</span>
+		<span class="type-list">网页</span>
+		<span class="type-list">动画</span>
+
 	</div>
 	<div class="statistic-tab">
 		<span class="statistic-item"><i class="icon-bar-chart"></i>推荐指数</span>
