--- a/src/less/res.less
+++ b/src/less/res.less
@@ -1,3 +1,10 @@
+// 整体宽度
+#res-container .col-md-3,#res-container .col-md-9{
+    padding-left: 0;
+}
+#res-container .col-md-9{
+    padding-right: 0;
+}
 /*顶部*/
 .res-header {
   height: 55px;
@@ -227,3 +234,181 @@
     height: 6px;
     background: #B0D042;
 }
+
+/*右侧*/
+#res-content-right{
+    background: #fff;
+    padding-top: 30px;
+}
+.res-content-header{
+    height: 30px;
+    margin-top: 30px;
+    background: url('assets/img/content-bg-header.png') repeat-x;
+}
+
+.res-header-catogry{
+    background: #DDD;
+    color: #5d5d5d;
+    font-size: 17px;
+    padding: 5px 15px;
+    
+}
+.res-header-catogry .catogry-item{
+    padding: 2px 3px;
+    margin: 3px 1px;
+    cursor: pointer;
+}
+//.catogry-item:before{
+//  content: url('assets/img/lib_before.png');
+//}
+//.catogry-item:after{
+//  content: url('assets/img/lib_after.png');
+//}
+.res-header-catogry .catogry-item:hover, .catogry-item-active{
+    background: @color5;
+    color: #fff;
+}
+
+.res-header-type{
+    margin: 20px;
+    font-size: 16px;
+    color: #808080;
+    
+}
+.res-header-type .type-title{
+    font-weight: bold;
+}
+.type-active{
+    background: @color5;
+    color:#fff;
+}
+.res-header-type .type-list:hover{
+    background: @color5;
+    color: #fff;
+}
+.res-header-type .type-list{
+    padding: 3px 6px;
+    cursor: pointer;
+}
+
+.statistic-tab{
+    font-size: 15px;
+    color:#9D9D9E;
+    margin: 5px 25px;
+    float: right;
+    height: 30px;
+}
+.statistic-item{
+    margin: 5px;
+    font-size: 15px;
+    color:#9D9D9E;
+    cursor: pointer;
+}
+.statistic-item:hover{
+    color:#1589BE;
+}
+
+// 资源列表
+.res-list-main{
+  margin-top: 60px;
+  margin-right: 15px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+// 列表显示
+.res-list-main .res-ul-list {
+  position: relative;
+  padding-left: 15px;
+}
+.res-list-main .res-list-item {
+  border-bottom: 1px dashed #9b9b9b;
+  position: relative;
+  padding: 6px;
+  margin: 8px 0;
+}
+.res-list-main .res-list-item:hover{
+    background: #e6f4f4;
+}
+.res-checkbox {
+  width: 19px;
+  height: 19px;
+  position: absolute;
+  left: 20px;
+  top: 40px;
+}
+
+.res-list-thumb{
+    margin-left: 55px;
+    width:100px;
+    height:100px;
+    margin-right: 6px;
+}
+.res-list-info{
+  position: absolute;
+  line-height: 30px;
+    
+}
+.res-title{
+    font-size: 17px;
+    color:#040000;
+}
+.res-type{
+    margin-left: 5px;
+}
+.res-size{
+    margin-left: 15px;
+}
+
+.res-number{
+   margin-left: 25px; 
+}
+.res-star i{
+    color: #dea618;
+    font-size: 16px;
+    margin-left: 5px;
+}
+.res-list-tools{
+    float: right;
+    
+}
+.res-select{
+    background: @color5;
+    color:#fff;
+    margin-top: 15px;
+    margin-right: 30px;
+    padding: 10px 25px;
+    border-radius: 6px;
+}
+.res-download{
+    font-size: 15px;
+    color:@color5;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+.res-list-tools .res-download i{
+    margin-right: 5px;
+    font-size: 18px;
+}
+.res-download:hover{
+    text-decoration: underline;
+}
+// 缩略图显示
+.res-list-main .res-ul-thubmlist {
+  position: relative;
+  padding-left: 15px;
+}
+.res-list-main .res-thubmlist-item {
+  border-bottom: 1px dashed #9b9b9b;
+  padding: 6px;
+  margin: 8px 0;
+}
+.res-list-main .res-thubmlist-item:hover{
+    background: #e6f4f4;
+}
+.res-thubmlist-tools .res-select{
+    padding: 6px 10px;
+    margin-right: 0;
+    margin-left: 10px;
+}
+
