--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -49,10 +49,15 @@
     position: absolute;
     bottom:6px;
     right: 6px;
-    padding: 6px;
+    padding: 6px 10px;
     background: rgba(255,255,255,0.5);
-    font-size: 30px;
+    font-size: 20px;
     border-radius: 50px;
+    cursor: pointer;
+}
+.slide-fullscreen:hover{
+    background: rgba(255,255,255,0.8);
+    color: #333;
 }
 .slide-container .slide-tools{
     position: relative;
