基本完成在线授课

--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -21,17 +21,21 @@
 }
 .slide-container .slide-arrow2{
     position: absolute;
-    top:46%;
+    top:26%;
     z-index: 9999999;
     color: #fff;
     color: #12879A;
     border-radius: 100px;
-    padding:5px 20px;
-    font-size: 20px;
+    padding:5px 15px;
+    font-size: 30px;
     cursor: pointer;
 }
 .slide-container .slide-arrow:hover{
     background: rgba(0,0,0,0.6);
+}
+.slide-container .slide-arrow2:hover{
+    background: rgba(0,0,0,0.2);
+    color: #ddd;
 }
 .slide-container .slide-next{
     right:0
@@ -50,10 +54,11 @@
     bottom:6px;
     right: 6px;
     padding: 6px 10px;
-    background: rgba(255,255,255,0.5);
+    background: rgba(0,0,0,0.5);
     font-size: 20px;
     border-radius: 50px;
     cursor: pointer;
+    color: #ddd;
 }
 .slide-fullscreen:hover{
     background: rgba(255,255,255,0.8);
@@ -68,7 +73,7 @@
 }
 .slide-thumbnail li{
     display: inline-block;
-    width: 90px;
+    width: 14.5%;
     margin: 6px;  
 }
 .slide-thumbnail img{
@@ -77,10 +82,6 @@
 .slide-thumbnail img:hover{
     width: 99%;
     border: 2px solid #009CD6;
-}
-
-#res-slide-content img{
-    width: 100%;
 }
 
 .slide-list {
