--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -5,16 +5,16 @@
 			<div class="slide-arrow slide-pre" ng-click="slidePre()"><i class="icon-chevron-left"></i></div>
 			<div class="slide-arrow slide-next" ng-click="slideNext()"><i class="icon-chevron-right"></i></div>
 			<div class="slide-content-inner">
-				<div id="res-slide-content"><img src="assets/img/online/tmp.png"/></div>
+				<div id="res-slide-content"></div>
 			</div>
-			<div class="slide-fullscreen"><i class="icon-fullscreen"></i></div>
+			<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>
 		</div>
 		
 		<div class="slide-tools" ng-show="VM.slideTools">
-			<div class="slide-arrow2 slide-pre"><i class="icon-chevron-left"></i></div>
-			<div class="slide-arrow2 slide-next"><i class="icon-chevron-right"></i></div>
+			<div class="slide-arrow2 slide-pre" ng-click="slidePreCustom()"><i class="icon-chevron-left"></i></div>
+			<div class="slide-arrow2 slide-next"  ng-click="slideNextCustom()"><i class="icon-chevron-right"></i></div>
 			<ul class="slide-thumbnail">
-				<li ng-repeat="item in slides" ng-click="selectRes($index)">
+				<li ng-repeat="item in slidesCustom" ng-click="selectRes($index)">
 					<img src="assets/img/online/tmp.png"/>
 					
 					<span>{{item.title}}</span>
