加入购物车动画

--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -4,7 +4,7 @@
 			<span class="list-header-title">{{$index+1}}、{{list.title}}</span>
 			<i class="icon-edit edit-prepare"></i> 
 			<i class="icon-trash"></i>
-			<span class="online-course"><i class="icon-play-circle"></i>在线授课</span>
+			<span class="online-course" ui-sref="onlineres"><i class="icon-play-circle"></i>在线授课</span>
 			<span class="zip-download"><i class="icon-cloud-download"></i> 打包下载</span>
 			
 		</div>
