--- a/src/less/res.less
+++ b/src/less/res.less
@@ -326,6 +326,7 @@
   position: relative;
   padding: 6px;
   margin: 8px 0;
+  cursor: pointer;
 }
 .res-list-main .res-list-item:hover{
     background: #e6f4f4;
