--- a/src/coms/layout/header/header4.html
+++ b/src/coms/layout/header/header4.html
@@ -1,6 +1,6 @@
-﻿<!--第三种页面header-->
+<!--第四种页面header  目前只有备课夹用到了-->
 <div id="header">
-	<div class="header-bg-custom3">
+	<div class="header-bg-custom3 header-bg-custom4">
 		<div class="container">
 			<img ui-sref="systemres" class="section-logo" ng-src="assets/img/{{pageLogo}}/{{pageLogo}}.png" />
 			<span class="section-title">{{pageTitle}}</span>
