--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -48,8 +48,8 @@
 		<ul class="res-ul-list" ng-show="isList">
 			<li class="res-list-item" ng-repeat="list in [0,1,2,3,4,5,6,7,8]">
 				<input class="res-checkbox" type="checkbox">
-				<img class="res-list-thumb" src="assets/img/title.jpg">
-				<span class="res-list-info">
+				<img class="res-list-thumb" src="assets/img/title.jpg" ui-sref="previewres">
+				<span class="res-list-info" ui-sref="previewres">
 					<label class="res-title">《触摸春天》生字学习</label><br>
 					<label class="res-type">类型: 动画</label>
 					<label class="res-size">大小：10M</label><br>
