--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -1,10 +1,5 @@
-﻿<!--header导航-->
-<div class="second-banner">
-	<div class="container" style="position: relative;">
-		<img src="assets/img/prepare/prepare-banner.png" />
-		<span class="head-title">备课夹</span>
+﻿<div class="container" style="position: relative;">
 		<button class="btn btn-success new-prepare">新建</button>
-	</div>
 </div>
 <div class="empty-nav empty-nav-custom"></div>
 <div class="container" id="prepare-container">
