--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -1,8 +1,33 @@
-﻿<div class="container" id="prepare-container">
-	<!--header导航-->
-	<div class="clearfix"></div>
-	<div data-ng-include="'/coms/layout/views/res/res-header.html'"></div>
-	<!--资源预览-->
-	<div  class="col-md-9" data-ng-include="'/coms/res-preview/views/preview-content.html'"></div>
-	
+﻿<div class="container" id="preview-container">
+	<div class="header-nav-tips"></div>
+	<div class="slide-container col-md-10">
+		<div class="slide-content">
+			<div class="slide-arrow slide-pre" ng-click="slidePre()"><i class="icon-chevron-left"></i></div>
+			<div class="slide-arrow slide-next" ng-click="slideNext()"><i class="icon-chevron-right"></i></div>
+			<div class="slide-content-inner">
+				<div id="res-slide-content"></div>
+			</div>
+			<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>
+		</div>
+		
+		<div class="slide-tools" ng-show="VM.slideTools">
+			<div class="slide-arrow2 slide-pre" ng-click="slidePreCustom()"><i class="icon-chevron-left"></i></div>
+			<div class="slide-arrow2 slide-next"  ng-click="slideNextCustom()"><i class="icon-chevron-right"></i></div>
+			<ul class="slide-thumbnail">
+				<li ng-repeat="item in slidesCustom" ng-click="selectRes($index)">
+					<img src="assets/img/online/tmp.png"/>
+					
+					<span>{{item.title}}</span>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-md-2">
+		<div class="slide-list">
+			<div class="slide-list-item" ng-repeat="item in slides">
+				<img src="assets/img/title.jpg">
+				<span>{{item.title}}</span>
+			</div>
+		</div>
+	</div>
 </div>
