--- a/src/less/header.less
+++ b/src/less/header.less
@@ -89,12 +89,26 @@
 // 第三种页面
 .header-bg-custom3{
     background: #fff;
+    padding-bottom: 15px;
 }
 .header-bg-custom3 .section-logo{
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 30px;
+    max-width: 100px;
+    max-height: 100px;
+}
+.header-bg-custom3 .section-title {
+    position: absolute;
+    font-size: 30px;
+    color: #12879A;
+    padding-top: 50px;
+    margin-left: 20px;
+    
 }
 .header-bg-custom3 .message{
+    margin-top: 60px;
+}
+.header-bg-custom4 .message{
     margin-top: 10px;
 }
 .empty-nav{
