资源预览页

--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -30,4 +30,72 @@
 			</div>
 		</div>
 	</div>
+	<div class="clearfix"></div>
+	<div class="banner-footer banner-footer-preview">
+		<div class="banner-footer-header"></div>
+		<div class="banner-footer-footer"></div>
+	</div>
+	
+	<!-- 资源简介 -->
+	<div class="preview-content">
+		<div class="res-intro">
+			<div class="intro-banner">资源简介</div>
+			<div class="intro-info">
+				<span class="intro-title">《荷塘月色》教案2</span>
+				<span class="intro-type">类型：课件</span>
+				<span class="intro-size">大小：620KB</span>
+			</div>
+			<div class="intro-details">资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介资源简介</div>
+		</div>
+		
+		<div class="res-conmment">
+			<div class="create-comment">
+				<div class="comment-info">
+					<span class="comment-user">用户名：张XXX</span>
+					<span class="comment-count">已有100人评价</span>
+					<span class="comment-star">0.0 <i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></span>
+					
+				</div>
+				<textarea></textarea>
+				<div class="comment-text">200/200</div>
+				<button class="btn btn-success">发表</button>
+			</div>
+			
+			<div class="conment-list">
+				<div class="comment-type">
+					<span class="other-comment">他人评论</span>
+					<span class="my-comment comment-active">我的评论</span>
+				</div>
+				<div class="coment-item">
+					<div class="item-user-date">
+						<span item-user>李XXX</span>
+						<span item-date>2016-04-03 12:00</span>
+					</div>
+					<div class="item-content">好好好好好好好好好好好好好好!</div>
+				</div>
+				<div class="coment-item">
+					<div class="item-user-date">
+						<span item-user>李XXX</span>
+						<span item-date>2016-04-03 12:00</span>
+					</div>
+					<div class="item-content">好好好好好好好好好好好好好好!</div>
+				</div>
+				<div class="coment-item">
+					<div class="item-user-date">
+						<span item-user>李XXX</span>
+						<span item-date>2016-04-03 12:00</span>
+					</div>
+					<div class="item-content">好好好好好好好好好好好好好好!</div>
+				</div>
+			</div>
+		</div>
+		
+		
+		
+		
+		
+		
+		
+		
+	</div>
 </div>
