--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -1,4 +1,5 @@
-﻿<div class="avatar-box" ng-controller="avatarSettingController">
+﻿<div class="empty-nav"></div>
+<div class="avatar-box" ng-controller="avatarSettingController">
 	    <script type="text/ng-template" id="avatar.html">
 	        <div class="modal-body avatar-modal-body">
 	            <div class="nav nav-tabs avatar-tabs" role="tablist">
