--- a/src/less/font.less
+++ b/src/less/font.less
@@ -6,12 +6,12 @@
 /*全局字体*/ 
 @font: "Microsoft YaHei", Arial, Helvetica, sans-serif, "宋体";
 
-/*基本字体大小 以10px为基础*/
-@fontsize: 62.5%;
+/*基本字体大小 以16px为基础*/
+@fontsize: 16px;
 
 body{
  	font-family: @font;
- 	font-size:  62.5%;
+   	font-size:  @fontsize;
 }
 
 /*通用字体大小设置*/
