--- a/src/less/header.less
+++ b/src/less/header.less
@@ -29,17 +29,20 @@
 #header .banner img{
     width: 100%;
 }
-#header .banner-footer{
+.banner-footer{
     margin-top: -30px;
 }
 
-#header .banner-footer-header{
+.banner-footer-header{
     height: 7px;
     background: url(assets/img/banner-footer.png) repeat-x;
 }
-#header .banner-footer-footer{
+.banner-footer-footer{
     height: 35px;
     background: @bannerFooterBgColor;
+}
+.banner-footer-preview{
+    margin-top: 15px;
 }
 
 #header .main-nav{
