--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -1,7 +1,7 @@
 // slide样式
 @slideBgColor: #5D5D5D;
 .slide-container{
-
+    margin-top: 15px;
 }
 .slide-container .slide-content{
     position: relative;
@@ -91,6 +91,7 @@
     text-align: center;
     max-height: 700px;
     overflow-y: auto;
+    margin-top: 15px;
 }
 .slide-list .slide-list-item{
    padding:10px 3px;
